--- a/src/container/chefs/chefs.css
+++ b/src/container/chefs/chefs.css
@@ -8,7 +8,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    max-width: 1200px;
+    align-items: flex-start;
+    width: 87vw;
     padding: 4rem 0;
     margin: 0 auto;
 }
@@ -51,7 +52,11 @@
     align-items: center;
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 960px) {
+    .ch_container{
+        width: 91vw;
+    }
+
     .ch_imgspot{
         grid-template-columns: 1fr;
         row-gap: 1rem;
@@ -69,6 +74,7 @@
 @media  screen and (max-width: 400px) {
     .ch_texts h2{
         font-size: 32px;
+        max-width: 300px;
     }
 
     .ch_texts h3{
