--- a/src/container/contact/contact.css
+++ b/src/container/contact/contact.css
@@ -8,9 +8,9 @@
 .ct_container{
     display: flex;
     justify-content: center;
+    align-items: flex-start;
     flex-direction: column;
-    width: 1200px;
-    margin: 0 auto;
+    width: 87vw;
     padding: 4rem 0;
 }
 
@@ -34,7 +34,7 @@
 .ct_texts h1{
     font-size: 36px;
     font-weight: 700;
-    margin: 0.5rem 0 2rem 0;
+    margin: 0.5rem 0 1rem 0;
     font-family: "Playfair Display", serif;
     color: #cda45e;
 }
@@ -213,11 +213,10 @@
     }
 }
 
-@media screen and (max-width: 930px) {
+@media screen and (max-width: 960px) {
 
     .ct_container{
-        padding: 2rem 0 2rem 4rem;
-        max-width: 900px;
+        width: 91vw;
     }
     .ct_input1{
         width: 600px;
