--- a/src/container/gallery/gallery.css
+++ b/src/container/gallery/gallery.css
@@ -7,9 +7,8 @@
 .gl_container{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
+    align-items: flex-start;
+    width: 87vw;
     padding: 4rem 0;
 }
 
@@ -17,8 +16,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 100%;
     align-items: flex-start;
+    width: 100%;
 }
 
 .gl_texts h3{
@@ -47,6 +46,8 @@
 .gl_images{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    column-gap: 1rem;
+    row-gap: 1rem;
 }
 
 
@@ -56,7 +57,11 @@
     }
 }
 
-@media screen and (max-width: 735px){
+@media screen and (max-width: 960px){
+    .gl_container{
+        width: 91vw;
+    }
+
     .gl_images{
         grid-template-columns: repeat(2, 1fr);
     }
