--- a/src/container/specials/specials.css
+++ b/src/container/specials/specials.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     padding: 4rem 0;
-    width: 1200px;
+    width: 87vw;
     margin: 0 auto;
 }
 
@@ -16,7 +16,6 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    width: 100%;
     margin-bottom: 2rem;
 }
 
@@ -46,6 +45,7 @@
 
 .sp_controllerbox{
     width: 35%;
+    margin: 1rem 0;
 }
 
 .sp_controller{
@@ -60,7 +60,7 @@
 }
 
 .sp_content p{
-    padding: 12px 15px;
+    padding: 12px 0;
     color: #fff;
     font-weight: 600;
     font-size: 15px;
@@ -77,6 +77,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin: 1rem 0;
 }
 
 .slidee{
@@ -86,4 +87,23 @@
 
 .slidee.active{
     opacity: 1;
+}
+
+@media screen and (max-width:960px){
+    .sp_container{
+        width: 91vw;
+    }
+
+    .sp_content{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .sp_controllerbox{
+        width: 100%;
+    }
+
+    .sp_controller{
+        border: none;
+    }
 }
